testdata/corset/invalid/range_invalid_03.lisp
;;error:3:1-19:malformed declaration
(defcolumns (X :i16) (Y :i16))
(definrange X 2 Y)
